--- a/website/public/projects.json
+++ b/website/public/projects.json
@@ -1,48 +1,162 @@
 [
   {
     "id": 1,
-    "title": "Boost your rate",
-    "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
+    "title": "Nova",
+    "image":"/projects/nova.png",
     "href": "#",
-    "description": "Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.",
+    "description": "Cross platform MOBA game made initially on Game Maker Studio later ported to Unity, the game behold a universe of endless aliens races that fight for fun.",
     "date": "Mar 16, 2020",
     "datetime": "2020-03-16",
     "category": {
-      "title": "Marketing",
+      "title": "Game Engineering",
       "href": "#"
     },
     "author": {
-      "name": "Michael Foster",
-      "role": "Co-Founder / CTO",
+      "name": "Klys.Dev",
+      "role": "Enterpreneuship",
       "href": "#",
-      "imageUrl": "https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+      "imageUrl": "https://klys.dev/klys.dev-icon.png"
     }
   },
   {
     "id": 2,
-    "title": "How to use search engine optimization to drive sales",
+    "title": "Logistic Receiving App",
     "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
     "href": "#",
     "description": "Optio cum necessitatibus dolor voluptatum provident commodi et. Qui aperiam fugiat nemo cumque.",
     "date": "Mar 10, 2020",
     "datetime": "2020-03-10",
     "category": {
-      "title": "Sales",
+      "title": "Logistic Engineering",
       "href": "#"
     },
     "author": {
-      "name": "Lindsay Walton",
-      "role": "Front-end Developer",
+      "name": "BestBuy",
+      "role": "Indivual Contributor & Tech Lead",
       "href": "#",
-      "imageUrl": "https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+      "imageUrl": "/logos/bestbuy.png"
     }
   },
   {
     "id": 3,
-    "title": "Improve your customer experience",
+    "title": "Rally Point App",
     "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
     "href": "#",
     "description": "Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci rem et corporis. Nostrud sint anim sunt aliqua. Nulla eu labore irure incididunt velit cillum quis magna dolore.",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Logistic Engineering",
+      "href": "#"
+    },
+    "author": {
+      "name": "BestBuy",
+      "role": "Indivual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/bestbuy.png"
+    }
+  },
+  {
+    "id": 4,
+    "title": "Inventory Management App",
+    "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
+    "href": "#",
+    "description": "Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci rem et corporis. Nostrud sint anim sunt aliqua. Nulla eu labore irure incididunt velit cillum quis magna dolore.",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Business",
+      "href": "#"
+    },
+    "author": {
+      "name": "BestBuy",
+      "role": "Indivual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/bestbuy.png"
+    }
+  },
+  {
+    "id": 5,
+    "title": "Support Tickets App",
+    "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
+    "href": "#",
+    "description": "Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci rem et corporis. Nostrud sint anim sunt aliqua. Nulla eu labore irure incididunt velit cillum quis magna dolore.",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Business",
+      "href": "#"
+    },
+    "author": {
+      "name": "BestBuy",
+      "role": "Indivual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/bestbuy.png"
+    }
+  },
+  {
+    "id": 6,
+    "title": "KPI Dashboard",
+    "image":"/projects/pegaboard.png",
+    "href": "#",
+    "description": "Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci rem et corporis. Nostrud sint anim sunt aliqua. Nulla eu labore irure incididunt velit cillum quis magna dolore.",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Business",
+      "href": "#"
+    },
+    "author": {
+      "name": "Pegatron Corp",
+      "role": "Individual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/pegatron.png"
+    }
+  },
+  {
+    "id": 7,
+    "title": "PegaChat",
+    "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
+    "href": "#",
+    "description": "Social Communication App with online conference capability for an internal network, serving around 300 employees",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Business",
+      "href": "#"
+    },
+    "author": {
+      "name": "Pegatron Corp",
+      "role": "Individual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/pegatron.png"
+    }
+  },
+  {
+    "id": 8,
+    "title": "ASUS PC Parts Requester Bot App",
+    "image":"/projects/asusbotapp.png",
+    "href": "#",
+    "description": "Bot to automatically request parts for ASUS MFG repair parts",
+    "date": "Feb 12, 2020",
+    "datetime": "2020-02-12",
+    "category": {
+      "title": "Business",
+      "href": "#"
+    },
+    "author": {
+      "name": "Pegatron Corp",
+      "role": "Individual Contributor & Tech Lead",
+      "href": "#",
+      "imageUrl": "/logos/pegatron.png"
+    }
+  },
+  {
+    "id": 10,
+    "title": "PegaChat",
+    "image":"https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80",
+    "href": "#",
+    "description": "Social Communication App with online conference capability for an internal network, serving around 300 employees",
     "date": "Feb 12, 2020",
     "datetime": "2020-02-12",
     "category": {
