--- a/website/package.json
+++ b/website/package.json
@@ -3,25 +3,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build --mode static",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
-    "@react-router/node": "7.12.0",
-    "@react-router/serve": "7.12.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
-    "isbot": "^5.1.31",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router": "7.12.0"
   },
   "devDependencies": {
-    "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^4.3.1",
     "tailwindcss": "^4.1.18",
     "vite": "^7.1.7"
   }
