--- a/website/public/projects.json
+++ b/website/public/projects.json
@@ -44,7 +44,7 @@
     ],
     "author": {
       "name": "BestBuy",
-      "role": "Indivual Contributor & Tech Lead",
+      "role": "individual Contributor & Tech Lead",
       "href": "#",
       "imageUrl": "/logos/bestbuy.png"
     }
@@ -73,7 +73,7 @@
     ],
     "author": {
       "name": "BestBuy",
-      "role": "Indivual Contributor & Tech Lead",
+      "role": "individual Contributor & Tech Lead",
       "href": "#",
       "imageUrl": "/logos/bestbuy.png"
     }
@@ -102,7 +102,7 @@
     ],
     "author": {
       "name": "BestBuy",
-      "role": "Indivual Contributor & Tech Lead",
+      "role": "individual Contributor & Tech Lead",
       "href": "#",
       "imageUrl": "/logos/bestbuy.png"
     }
@@ -127,7 +127,7 @@
     ],
     "author": {
       "name": "BestBuy",
-      "role": "Indivual Contributor & Tech Lead",
+      "role": "individual Contributor & Tech Lead",
       "href": "#",
       "imageUrl": "/logos/bestbuy.png"
     }
@@ -323,7 +323,7 @@
     ],
     "author": {
       "name": "Quo.Agency",
-      "role": "Individual Contributor & Tech Lead",
+      "role": "Individual Contributor",
       "href": "#",
       "imageUrl": "/logos/quoagency.jpeg"
     }
